--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
+    "axios": "^1.8.3",
     "fs": "^0.0.1-security",
     "inquirer": "^12.4.3",
     "path": "^0.12.7"
